# Investigation.SKILL

./: .gitignore  LICENSE  README.md
doc/: data-model.md  design-doc.md  discussion.md  investigation-graph-concept.md  phase3-execution-plan.md
src/mcp-server/: pyproject.toml  server.py
src/mcp-server/investigation_graph/: __init__.py  __main__.py  db.py  models.py  queries.py  server.py
src/mcp-server/investigation_graph/tools/: __init__.py  edges.py  graph.py  identity.py  nodes.py  reports.py  sessions.py
src/mcp-server/tests/: conftest.py  test_edges.py  test_edges_advanced.py  test_graph.py  test_graph_advanced.py  test_identity.py  test_nodes.py  test_reports.py  test_sessions.py
src/skills/investigation/: SKILL.md
src/skills/investigation/agents/: analysis-agent.md  report-agent.md  web-search-agent.md
src/skills/investigation/references/: mcp-commands.md  workflow.md
