[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "investigation-graph-mcp"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
investigation-graph = "investigation_graph.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["investigation_graph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
